Added community solution for SaddlePointsCommunity